# fun

./: .clang-tidy  CMakeLists.txt  README.md  main.cpp  vcpkg.json
cmake/: tooling.cmake
include/: constexpr_ops.hpp  fun.hpp  main.cpp  main.out  run
test/: tests.cpp
